# rust-es

./: Cargo.toml  README.md  docker-compose.yml
src/: book.rs  es.rs  kafka.rs  main.rs
