[package]
name = "rust-es"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rocksdb = "0.18.0"
uuid = { version = "0.4", features = ["v4"] }